--- a/_config.next.yml
+++ b/_config.next.yml
@@ -375,8 +375,8 @@ codeblock:
   # Code Highlight theme
   # All available themes: https://theme-next.js.org/highlight/
   theme:
-    light: default
-    dark: stackoverflow-dark
+    light: rainbow
+    dark: rainbow
   prism:
     light: prism
     dark: prism-dark
@@ -385,7 +385,7 @@ codeblock:
     enable: true
     show_result: true
     # Available values: default | flat | mac
-    style:
+    style: mac
 
 back2top:
   enable: true
