--- a/_config.next.yml
+++ b/_config.next.yml
@@ -277,7 +277,7 @@ tag_icon: false
 # Front-matter variable (nonsupport animation).
 reward_settings:
   # If true, a donate button will be displayed in every article by default.
-  enable: true
+  enable: false
   animation: false
   comment: Buy me a coffee
 
